--- a/k8s_add/seq-deployment.yaml
+++ b/k8s_add/seq-deployment.yaml
@@ -12,6 +12,10 @@ spec:
       labels:
         component: seq
     spec:
+      volumes:
+        - name: seq-storage
+          persistentVolumeClaim: 
+            claimName: seq-persistent-volume-claim
       containers: 
         - name: seq
           image: datalust/seq:latest
@@ -20,19 +24,9 @@ spec:
               containerPort: 5341
             - name: seq-web-ui
               containerPort: 80
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: seq-cluster-ip-service
-spec:
-  type: ClusterIP
-  selector:   
-    component: seq
-  ports:
-    - name: seq-collect
-      port: 5341
-      targetPort: 5341
-    - name: seq-web-ui
-      port: 80
-      targetPort: 85
+          volumeMounts:
+            - name: seq-storage
+              mountPath: /data
+          env: 
+            - name: ACCEPT_EULA
+              value: "Y"
